Fix background shift in post menus with glass theme

--- a/less/base.less
+++ b/less/base.less
@@ -225,7 +225,6 @@ span.control .popup-menu {
 .popup-menu {
 	padding: 5px;
 	position: absolute;
-	transform: translateX(-75%);
 	margin-top: 0.1em;
 	li {
 		list-style: none;
